Added Soft delete to all entities